[CarlosDanielGoCaza]: Added a h1 message on index.html at the end

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <button type="button">Download QR Code</button>
     </form>
     <script src="script.js"></script>
+    <h1> CARLOS ESTUVO AQUI JAJA </h1>
 </body>
 
 </html>
